--- a/.babelrc
+++ b/.babelrc
@@ -11,5 +11,8 @@
       "modules": false
     }]
   ],
-  "plugins": ["@babel/plugin-proposal-optional-chaining"]
+  "plugins": [
+    "@babel/plugin-proposal-optional-chaining",
+    "@babel/plugin-transform-runtime"
+  ]
 }
